--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
