--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     repositories {
+
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
